[gd_scene load_steps=2 format=2]

[ext_resource path="res://Singleton/ScreenShake.gd" type="Script" id=1]

[node name="ScreenShake" type="Node"]
script = ExtResource( 1 )

[node name="ShakeTween1" type="Tween" parent="."]

[node name="ShakeTween2" type="Tween" parent="."]

[node name="frequency" type="Timer" parent="."]

[node name="duration" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="frequency" to="." method="frequency_timeout"]
[connection signal="timeout" from="duration" to="." method="duration_timeout"]
